# my-rag-system

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  db.py  embedding.py  rag_pipeline.py
src/cleanup/: cleanup.py  cleanup_runner.py
src/collections/: collection_ui.py
src/ingestion/: ingest.py
src/loaders/: document_loader.py
src/pipeline/: chunking_ui.py  query.py
src/preprocessing/: chunking.py  cleaning.py  file_utils.py
src/rag/: generator.py  prompts.py  query_engine.py
src/retrieval/: context.py  reranker.py  retrieval.py  search.py
src/ui/: main.py
