[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Yash Mahajan",email = "yashmahajan18521@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=2.44.0,<3.0.0)",
    "faiss-cpu (>=1.14.3,<2.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "google-genai (>=2.10.0,<3.0.0)",
    "langchain (>=1.3.11,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "pypdf (>=6.14.2,<7.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.34.2,<3.0.0)",
    "lxml (>=6.1.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "rag", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
